[gd_scene load_steps=6 format=3 uid="uid://bl6h58asl377"]

[ext_resource type="Script" uid="uid://daglkxqdyrtmb" path="res://src/ui/components/chat/chat.gd" id="1_llfi5"]
[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="1_ytipc"]
[ext_resource type="Texture2D" uid="uid://byv55qwr3riuh" path="res://assets/themes/dark_dcl_theme/icons/send.svg" id="3_umu3q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xauh3"]
bg_color = Color(0, 0, 0, 0.235294)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8g52q"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[node name="Panel_Chat" type="Panel"]
custom_minimum_size = Vector2(300, 250)
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("1_ytipc")
theme_override_styles/panel = SubResource("StyleBoxFlat_xauh3")
script = ExtResource("1_llfi5")

[node name="Timer_Hide" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8g52q")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Nearby"

[node name="Label2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/Label2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "# Online"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/Label2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer_LineEdit" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="LineEdit_Command" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer_LineEdit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 0
placeholder_text = "Write your message here..."

[node name="Button_Send" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer_LineEdit"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 16
icon = ExtResource("3_umu3q")
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel_Chat" type="RichTextLabel" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[connection signal="timeout" from="Timer_Hide" to="." method="_on_timer_hide_timeout"]
[connection signal="focus_exited" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer_LineEdit/LineEdit_Command" to="." method="_on_line_edit_command_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer_LineEdit/LineEdit_Command" to="." method="_on_line_edit_command_text_submitted"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer_LineEdit/Button_Send" to="." method="_on_button_send_pressed"]
